rework welcome html page, add state machine exploration

--- a/index.html
+++ b/index.html
@@ -11,73 +11,131 @@
 	</head>
 
 	<style>
-		li { list-style: none; padding: 0.5em 1em;}
+		body {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			font-family: sans-serif;
+		}
+		@media (prefers-color-scheme: dark) {
+			body { background: #222; color: #ccc; }
+		}
+		@media (prefers-color-scheme: light) {
+			body { background: #ddd; }
+		}
+		.card {
+			max-width: 650px;
+			width: 100%;
+			overflow: hidden;
+			border-radius: 3px;
+			box-shadow: 1px 1px 3px 0px #000a
+		}
+		.card + .card { margin-top: 1rem; }
+		.card > a {
+			display: flex;
+			text-decoration: none;
+			color: inherit;
+		}
+		.preview {
+			width: 7rem;
+			height: 7rem;
+			background: ButtonBorder;
+			background-size: contain;
+		}
+		.info {
+			background: #fff2;
+			flex:1;
+			padding: 0.5rem;
+		}
+		.info .title {
+			font-weight: 300;
+			text-transform: uppercase;
+		}
+		.description {
+			font-size: medium;
+			font-weight: 100;
+			margin-top: 0.25rem;
+		}
 	</style>
 
 	<body></body>
 
 	<script>
+		const ListItem = ({ link, title, desc='', preview }) => {
+			const element = document.createElement('div');
+			element.classList.add('card');
+			element.innerHTML= `
+					<a href="${link}">
+						<div class="preview" style="background-image:url('${preview}')"></div>
+						<div class="info">
+							<div class="title">${title.replace(/-/g, ' ')}</div>
+							<div class="description">${desc}</div>
+						</div>
+					</a>
+			`.trim();
+			return element;
+		};
+
 		const experiments = [
-			['playground/bookmarks/bookmarks', 'bookmarks'],
-			['playground/css-3d', 'css-3d'],
-			['playground/css-doodle', 'css-doodle'],
-			['playground/encrypt-web-worker', 'encrypt-web-worker'],
-			['playground/iching/iching', 'iching'],
-			['playground/kalman/kalman', 'kalman'],
-			['playground/mixed-canvas/mixed-canvas', 'mixed canvas'],
+			['playground/state-machine/index', 'State Machine', 'Explorer state machine concepts', 'https://user-images.githubusercontent.com/1816471/219848753-09183123-bca1-4eb8-80a7-74f5d4272464.png'],
+			['playground/bookmarks/bookmarks', 'bookmarks', '', 'https://user-images.githubusercontent.com/1816471/219848051-dc4cc529-0737-471b-a481-3c53cddb158e.png'],
+			['playground/rss-feed/index', 'News Feed', 'Hacker News ++', 'https://user-images.githubusercontent.com/1816471/219848465-57655ed3-ad97-4eac-aa26-4a12ce9390dd.png'],
+			['playground/pokedex/pokedex', 'pokedex', 'My own basic dex tool','https://user-images.githubusercontent.com/1816471/219848525-8a6e5098-6651-43ac-a7f6-a36f6ac4f658.png'],
+			['playground/css-3d', 'css-3d', 'How 3D can you go with CSS? I attempt to answer this.', 'https://user-images.githubusercontent.com/1816471/219848103-0b88b67a-cb25-4917-8b72-9cf71055b5c4.png'],
+			['playground/encrypt-web-worker', 'encrypt-web-worker', 'Explore encryption using browser web worker', 'https://user-images.githubusercontent.com/1816471/219848209-0d78f850-dc8a-41f3-b6f6-bf650a0a9c40.png'],
+			['playground/iching/iching', 'iching', '', 'https://user-images.githubusercontent.com/1816471/219848265-e798f722-fa59-4094-af86-8cb9e610247c.png'],
+			['playground/kalman/kalman', 'kalman', 'Experiment to recover data from noisy sensors', 'https://user-images.githubusercontent.com/1816471/219848300-196b886c-8164-43fb-bc37-dc7b7effa620.png'],
+			['playground/mixed-canvas/mixed-canvas', 'mixed canvas', '2D + 3D in one canvas', 'https://user-images.githubusercontent.com/1816471/219848807-61944f32-d41f-483f-8a9d-31fba07a5b94.png'],
 			['playground/rangers-advent/rangers.advent', 'rangers-advent'],
-			['playground/rss-feed/index', 'News Feed'],
 			['playground/languages/shiki/shiki', 'shiki'],
 			['playground/tower.defense/tower.defense', 'tower defense'],
 			['playground/wave-function-collapse/wave-function', 'wave function collapse'],
 			['playground/webgl-quad/webgl-quad', 'webgl-quad'],
-			['playground/pokedex/pokedex', 'pokedex'],
 			['playground/gameAsGame/index', 'GAME game'],
 			['playground/tictactoe/index', 'Tic Tac Toe'],
 			['playground/board/index', 'Game Board'],
-			['playground/sky-gradient/index', 'Sky Sim'],
+			['playground/sky-gradient/index', 'Sky Sim', 'Simulate the sky at different times of the day'],
 			['playground/stack-css/index', 'Stack Game'],
 			['playground/uxn/rom', 'Web UXN'],
 			['playground/webrtc/index', 'Web RTC'],
-			['playground/cityBottle/index', 'City In a Bottle'],
+			['playground/cityBottle/index', 'City In a Bottle', 'Playing around with JS from Twitter@KilledByAPixel'],
+			['playground/css-doodle', 'css-doodle', 'Not sure why this doodle is broken'],
 		];
 
 		const others = [
-			['https://crosshj.com', 'crosshj.com'],
-			['https://crosshj.com/grfx/', 'grfx'],
-			['https://chimpjuice.com', 'chimpjuice.com'],
+			['https://crosshj.com', 'crosshj.com', 'Personal / portfolio site'],
+			['https://crosshj.com/grfx/', 'grfx', 'Yet another graphics manipulation app'],
+			['https://chimpjuice.com', 'chimpjuice.com', 'Random-ish tumblr blog'],
 		];
 
 		const experimentsHeader = document.createElement('p');
 		experimentsHeader.textContent = 'experiments:';
 		document.body.append(experimentsHeader);
 		experiments.forEach(exp => {
-			const element = document.createElement('div');
 			exp = Array.isArray(exp)
 				? exp
 				: [exp,exp]
-			element.innerHTML = `
-				<li>
-					<a href="./${exp[0]}.html">${exp[1]}</a>
-				</li>
-			`;
-			document.body.append(element);
+			document.body.append(ListItem({
+				link: `./${exp[0]}.html`,
+				title: exp[1],
+				desc: exp[2],
+				preview: exp[3],
+			}));
 		});
 
 		const otherHeader = document.createElement('p');
 		otherHeader.textContent = 'other:';
 		document.body.append(otherHeader);
 		others.forEach(exp => {
-			const element = document.createElement('div');
 			exp = Array.isArray(exp)
 				? exp
-				: [exp,exp]
-			element.innerHTML = `
-				<li>
-					<a href="${exp[0]}">${exp[1]}</a>
-				</li>
-			`;
-			document.body.append(element);
+				: [exp,exp];
+			document.body.append(ListItem({
+				link: exp[0],
+				title: exp[1],
+				desc: exp[2],
+				preview: exp[3],
+			}));
 		});
 
 	</script>
