--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		};
 
 		const experiments = [
-			['playground/state-machine/index', 'State Machine', 'Explorer state machine concepts', 'https://user-images.githubusercontent.com/1816471/219848753-09183123-bca1-4eb8-80a7-74f5d4272464.png'],
+			['playground/state-machine/index', 'State Machine', 'Explore state machine concepts', 'https://user-images.githubusercontent.com/1816471/219848753-09183123-bca1-4eb8-80a7-74f5d4272464.png'],
 			['playground/bookmarks/bookmarks', 'bookmarks', '', 'https://user-images.githubusercontent.com/1816471/219848051-dc4cc529-0737-471b-a481-3c53cddb158e.png'],
 			['playground/rss-feed/index', 'News Feed', 'Hacker News ++', 'https://user-images.githubusercontent.com/1816471/219848465-57655ed3-ad97-4eac-aa26-4a12ce9390dd.png'],
 			['playground/pokedex/pokedex', 'pokedex', 'My own basic dex tool','https://user-images.githubusercontent.com/1816471/219848525-8a6e5098-6651-43ac-a7f6-a36f6ac4f658.png'],
