--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			['playground/tictactoe/index', 'Tic Tac Toe'],
 			['playground/board/index', 'Game Board'],
 			['playground/sky-gradient/index', 'Sky Sim', 'Simulate the sky at different times of the day'],
-			['playground/stack-css/index', 'Stack Game'],
+			['playground/stack-css/index', 'Stack Game', '', 'https://user-images.githubusercontent.com/1816471/219849230-35442d68-dc83-4c3f-8038-301258570bc6.png'],
 			['playground/uxn/rom', 'Web UXN'],
 			['playground/webrtc/index', 'Web RTC'],
 			['playground/cityBottle/index', 'City In a Bottle', 'Playing around with JS from Twitter@KilledByAPixel'],
