--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
 	<body></body>
 
-	<script>
+	<script type="module">
+		import { experiments, others } from './index.examples.js';
+
 		const ListItem = ({ link, title, desc='', preview }) => {
 			const element = document.createElement('div');
 			element.classList.add('card');
@@ -75,38 +77,6 @@
 			`.trim();
 			return element;
 		};
-
-		const experiments = [
-			['playground/state-machine/index', 'State Machine', 'Explore state machine concepts', 'https://user-images.githubusercontent.com/1816471/219848753-09183123-bca1-4eb8-80a7-74f5d4272464.png'],
-			['playground/bookmarks/bookmarks', 'bookmarks', '', 'https://user-images.githubusercontent.com/1816471/219848051-dc4cc529-0737-471b-a481-3c53cddb158e.png'],
-			['playground/rss-feed/index', 'News Feed', 'Hacker News ++', 'https://user-images.githubusercontent.com/1816471/219848465-57655ed3-ad97-4eac-aa26-4a12ce9390dd.png'],
-			['playground/pokedex/pokedex', 'pokedex', 'My own basic dex tool','https://user-images.githubusercontent.com/1816471/219848525-8a6e5098-6651-43ac-a7f6-a36f6ac4f658.png'],
-			['playground/css-3d', 'css-3d', 'How 3D can you go with CSS? I attempt to answer this.', 'https://user-images.githubusercontent.com/1816471/219848103-0b88b67a-cb25-4917-8b72-9cf71055b5c4.png'],
-			['playground/encrypt-web-worker', 'encrypt-web-worker', 'Explore encryption using browser web worker', 'https://user-images.githubusercontent.com/1816471/219848209-0d78f850-dc8a-41f3-b6f6-bf650a0a9c40.png'],
-			['playground/iching/iching', 'iching', '', 'https://user-images.githubusercontent.com/1816471/219848265-e798f722-fa59-4094-af86-8cb9e610247c.png'],
-			['playground/kalman/kalman', 'kalman', 'Experiment to recover data from noisy sensors', 'https://user-images.githubusercontent.com/1816471/219848300-196b886c-8164-43fb-bc37-dc7b7effa620.png'],
-			['playground/mixed-canvas/mixed-canvas', 'mixed canvas', '2D + 3D in one canvas', 'https://user-images.githubusercontent.com/1816471/219848807-61944f32-d41f-483f-8a9d-31fba07a5b94.png'],
-			['playground/rangers-advent/rangers.advent', 'rangers-advent'],
-			['playground/languages/shiki/shiki', 'shiki'],
-			['playground/tower.defense/tower.defense', 'tower defense'],
-			['playground/wave-function-collapse/wave-function', 'wave function collapse'],
-			['playground/webgl-quad/webgl-quad', 'webgl-quad'],
-			['playground/gameAsGame/index', 'GAME game'],
-			['playground/tictactoe/index', 'Tic Tac Toe'],
-			['playground/board/index', 'Game Board'],
-			['playground/sky-gradient/index', 'Sky Sim', 'Simulate the sky at different times of the day'],
-			['playground/stack-css/index', 'Stack Game', '', 'https://user-images.githubusercontent.com/1816471/219849230-35442d68-dc83-4c3f-8038-301258570bc6.png'],
-			['playground/uxn/rom', 'Web UXN'],
-			['playground/webrtc/index', 'Web RTC'],
-			['playground/cityBottle/index', 'City In a Bottle', 'Playing around with JS from Twitter@KilledByAPixel'],
-			['playground/css-doodle', 'css-doodle', 'Not sure why this doodle is broken'],
-		];
-
-		const others = [
-			['https://crosshj.com', 'crosshj.com', 'Personal / portfolio site'],
-			['https://crosshj.com/grfx/', 'grfx', 'Yet another graphics manipulation app'],
-			['https://chimpjuice.com', 'chimpjuice.com', 'Random-ish tumblr blog'],
-		];
 
 		const experimentsHeader = document.createElement('p');
 		experimentsHeader.textContent = 'experiments:';
