--- a/playground/boxes-and-wires/index.html
+++ b/playground/boxes-and-wires/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Boxes and Wires</title>
+		<title></title>
 		<meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="color-scheme" content="dark light">
 		<meta name="mobile-web-app-capable" content="yes">
 		<link rel="stylesheet" href="index.css">
 		<!-- <link rel="manifest" href="./pwa/manifest.json" /> -->
 	</head>
 
 	<body>
-		in progress: migrating from /svg
 	</body>
 
 	<script src="index.js" type="module"></script>
