--- a/playground/boxes-and-wires/test.html
+++ b/playground/boxes-and-wires/test.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Boxes and Wires (TEST)</title>
+		<title></title>
 		<meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="color-scheme" content="dark light">
 		<meta name="mobile-web-app-capable" content="yes">
 		<link rel="icon" href="data:,">
 		<link rel="stylesheet" href="boxes-and-wires.css">
@@ -13,16 +14,7 @@
 	</head>
 
 	<body>
-		<div id="testContainer">
-			<pre style="tab-size: 0">
-				WIP: migrating from ../svg
-
-				I'm not sure what happened to the progress of this
-				trying to pick it back up
-			</pre>
-		</div>
 	</body>
 
 	<script src="test.js" type="module"></script>
-
 </html>
