--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 			width: 7rem;
 			height: 7rem;
 			background: ButtonBorder;
-			background-size: contain;
+			background-size: cover;
+			background-position: center;
 		}
 		.info {
 			background: #fff2;
