--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 			width: 100%;
 			overflow: hidden;
 			border-radius: 3px;
-			box-shadow: 1px 1px 3px 0px #000a
+			box-shadow: 1px 1px 3px 0px #000a;
+			cursor: pointer;
 		}
 		.card + .card { margin-top: 1rem; }
 		.card > a {
