--- a/playground/pokedex/pokedex.html
+++ b/playground/pokedex/pokedex.html
@@ -8,7 +8,7 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="color-scheme" content="dark">
 
-		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
 		<link rel="manifest" href="manifest.json">
 
