--- a/playground/trees/index.html
+++ b/playground/trees/index.html
@@ -8,12 +8,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="color-scheme" content="dark light">
 		<meta name="mobile-web-app-capable" content="yes">
-		<link rel="stylesheet" href="pocket.css">
+		<link rel="stylesheet" href="index.css">
 		<!-- <link rel="manifest" href="./pwa/manifest.json" /> -->
 	</head>
 
 	<body>
 	</body>
 
-	<script src="pocket.js" type="module"></script>
+	<script src="index.js" type="module"></script>
 </html>
