--- a/index.html
+++ b/index.html
@@ -8,57 +8,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="color-scheme" content="dark light">
+		<link rel="stylesheet" href="index.css"/>
 	</head>
-
-	<style>
-		body {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			font-family: sans-serif;
-		}
-		@media (prefers-color-scheme: dark) {
-			body { background: #222; color: #ccc; }
-		}
-		@media (prefers-color-scheme: light) {
-			body { background: #ddd; }
-		}
-		.card {
-			max-width: 650px;
-			width: 100%;
-			overflow: hidden;
-			border-radius: 3px;
-			box-shadow: 1px 1px 3px 0px #000a;
-			cursor: pointer;
-		}
-		.card + .card { margin-top: 1rem; }
-		.card > a {
-			display: flex;
-			text-decoration: none;
-			color: inherit;
-		}
-		.preview {
-			width: 7rem;
-			height: 7rem;
-			background: ButtonBorder;
-			background-size: cover;
-			background-position: center;
-		}
-		.info {
-			background: #fff2;
-			flex:1;
-			padding: 0.5rem;
-		}
-		.info .title {
-			font-weight: 300;
-			text-transform: uppercase;
-		}
-		.description {
-			font-size: medium;
-			font-weight: 100;
-			margin-top: 0.25rem;
-		}
-	</style>
 
 	<body></body>
 
