quadcopter, refactor scratch1

--- a/playground/webgl-quad/index.html
+++ b/playground/webgl-quad/index.html
@@ -19,7 +19,7 @@
 			</a>
 		</div>
 		<div class="card">
-			<a href="./scratch1.html">
+			<a href="./scratch1/scratch1.html">
 				<div class="preview" style="background-image:url('./scratch1.svg')"></div>
 				<div class="info">
 					<div class="title">Scratch 1</div>
