--- a/playground/webgl-quad/scratch1/scratch1.html
+++ b/playground/webgl-quad/scratch1/scratch1.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta name="color-scheme" content="dark light">
-		<link rel="stylesheet" href="../../index.css"/>
+		<link rel="stylesheet" href="../../../index.css"/>
 	</head>
 	<body></body>
 	<script type="module" src="scratch1.js"></script>
