quad: add noise, PID++ to scratch1

--- a/playground/webgl-quad/index.html
+++ b/playground/webgl-quad/index.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="card">
 			<a href="./scratch1/scratch1.html">
-				<div class="preview" style="background-image:url('./scratch/scratch1.svg')"></div>
+				<div class="preview" style="background-image:url('./scratch1/scratch1.svg')"></div>
 				<div class="info">
 					<div class="title">Scratch 1</div>
 					<div class="description">working out dynamics in lower dimensions</div>
