--- a/playground/tower.defense/tower.defense.html
+++ b/playground/tower.defense/tower.defense.html
@@ -32,7 +32,7 @@
 		/>
 	</body>
 
-	<script src="./visuals/screen.js" type="module"></script>
-	<script src="./engine/config.js" type="module"></script>
-	<script src="./engine/init.js" type="module"></script>
+	<script src="./visuals/screen.js?cache=slsl" type="module"></script>
+	<script src="./engine/config.js?cache=slsl" type="module"></script>
+	<script src="./engine/init.js?cache=slsl" type="module"></script>
 </html>
