--- a/playground/tower.defense/tower.defense.html
+++ b/playground/tower.defense/tower.defense.html
@@ -10,7 +10,6 @@
 
 		<link rel="stylesheet" href="./visuals/page.css" />
 		<link rel="stylesheet" href="./visuals/controls.css" />
-		<link rel="stylesheet" href="./visuals/screen.css" />
 	</head>
 
 	<body>
@@ -32,7 +31,6 @@
 		/>
 	</body>
 
-	<script src="./visuals/screen.js?cache=slsl" type="module"></script>
-	<script src="./engine/config.js?cache=slsl" type="module"></script>
-	<script src="./engine/init.js?cache=slsl" type="module"></script>
+	<script src="./engine/config.js?cache=111" type="module"></script>
+	<script src="./engine/init.js?cache=111" type="module"></script>
 </html>
