tower defense: menu

--- a/playground/tower.defense/tower.defense.html
+++ b/playground/tower.defense/tower.defense.html
@@ -8,6 +8,14 @@
 		<meta name="mobile-web-app-capable" content="yes" />
 		<link rel="manifest" href="./manifest.json" />
 
+		<link
+			href="https://fonts.googleapis.com/css?family=Press+Start+2P"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./visuals/page.css" />
 		<link rel="stylesheet" href="./visuals/controls.css" />
 	</head>
@@ -36,5 +44,5 @@
 			container.classList.add('dev');
 		}
 	</script>
-	<script src="./engine/init.js?cache=222" type="module"></script>
+	<script src="./visuals/menu.js?cache=289328938293" type="module"></script>
 </html>
