--- a/playground/wave-function-collapse/wave-function.html
+++ b/playground/wave-function-collapse/wave-function.html
@@ -7,6 +7,7 @@
 		<meta name="author" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="mobile-web-app-capable" content="yes" />
+		<link rel="icon" href="./favicon.svg" type="image/svg+xml" />
 		<link rel="stylesheet" href="wave-function.css" />
 	</head>
 
